# bt

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  doc_server.sh  docs.sh
.github/scripts/: test.sh
.github/workflows/: publish.yml  publish_by_tag.yml  release.yml
bt_lib/: Cargo.toml
bt_lib/src/: client.rs  error.rs  lib.rs  magnet.rs  peer.rs  tracker.rs
bt_ui/: Cargo.toml
bt_ui/src/: main.rs
torrent/: Cargo.toml
torrent_cli/: Cargo.toml
torrent_cli/src/: lib.rs
torrent_lib/: Cargo.toml
torrent_lib/src/: error.rs  lib.rs
torrent_ui/: Cargo.toml
torrent_ui/src/: lib.rs  magnet.rs  main.rs  tracker.rs
