[workspace]
members = ["bt_ui", "bt_lib"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Louis <836250617@qq.com>"]
description = "A bittorrent client."
license = "MIT"
edition = "2021"
repository = "https://github.com/kingwingfly/bt"
documentation = ""

[workspace.dependencies]
bt_ui = { path = "bt_ui" }
bt_lib = { path = "bt_lib" }
# async
tokio = { version = "1", default-features = false }
# error
thiserror = { version = "1.0.66" }
# tracing
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18" }

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1
strip = "debuginfo"
panic = "abort"
