[package]
name = "bt_lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A bittorrent client."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# async
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
# error
thiserror = { workspace = true }
# utils
url = "2.5.2"
# tracing
tracing = { workspace = true }
