[package]
name = "bt_ui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A bittorrent client."

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
bt_lib = { workspace = true }
# async
tokio = { workspace = true, features = ["rt-multi-thread", "signal", "macros"] }
# cli
clap = { version = "4.5.20", features = ["derive"] }
# tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
